Removed b-list gaps while b-edit open. Fixed a bug with b-edit sections not using b_id. Ajax no longer cached.

--- a/www/assets/css/duplicati2.less
+++ b/www/assets/css/duplicati2.less
@@ -272,16 +272,18 @@ a.warn:hover {
 	}
 }
 
-.b-space {
-	margin-top: 21px;
-	height: 60px;
-	float: right;
+#b-list > .row {
+	position: relative;
 }
 
 .b-edit, .b-actions, .b-close {
 	.hide;
 	padding-top: @spacing;
 	padding-bottom: @spacing;
+	position: absolute;
+	top: (@height + @spacing * 2);
+	right: 8.33333333%;
+	z-index: 1;
 	float: right;
 	background: @box-faded;
 	border-left: @spacing solid @slate;
